# VaR_in_cpp

./: CMakeLists.txt
include/: Asset.h  Statistics.h  VaRCalculator.h
src/: Asset.cpp  Statistics.cpp  VaRCalculator.cpp
